--- a/supervisord.conf
+++ b/supervisord.conf
@@ -43,7 +43,7 @@ user=root
 autostart=true
 autorestart=true
 priority=200
-environment=PYTHONPATH="/app/backend",TZ="Asia/Taipei",DATABASE_URL="%(ENV_DATABASE_URL)s",API_HOTEL_CODE="%(ENV_API_HOTEL_CODE)s",API_USERNAME="%(ENV_API_USERNAME)s",API_PASSWORD="%(ENV_API_PASSWORD)s",DEBUG="%(ENV_DEBUG)s",LOG_LEVEL="%(ENV_LOG_LEVEL)s"
+environment=PYTHONPATH="/app/backend",TZ="Asia/Taipei"
 stdout_logfile=/var/log/supervisor/api.log
 stderr_logfile=/var/log/supervisor/api_error.log
 stdout_logfile_maxbytes=50MB
