--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -93,12 +93,29 @@ ENV PYTHONDONTWRITEBYTECODE=1 \
 
 # Zeabur會自動設置PORT環境變量，我們需要適配
 RUN echo '#!/bin/bash\n\
+set -e\n\
+\n\
 # 設置默認端口\n\
 export PORT=${PORT:-80}\n\
-echo "🚀 Starting services on port $PORT"\n\
+echo "🚀 Starting Zeabur deployment on port $PORT"\n\
+echo "🌐 Zeabur assigned PORT: $PORT"\n\
+\n\
+# 顯示當前Nginx配置中的端口\n\
+echo "📋 Current Nginx config port:"\n\
+grep "listen" /etc/nginx/sites-available/default || echo "No listen directive found"\n\
 \n\
 # 更新Nginx配置中的端口\n\
+echo "🔧 Updating Nginx port from 80 to $PORT..."\n\
 sed -i "s/listen 80;/listen $PORT;/" /etc/nginx/sites-available/default\n\
+\n\
+# 確認端口修改成功\n\
+echo "✅ Updated Nginx config port:"\n\
+grep "listen" /etc/nginx/sites-available/default\n\
+\n\
+# 測試Nginx配置語法\n\
+echo "🧪 Testing Nginx configuration..."\n\
+nginx -t || (echo "❌ Nginx config test failed" && exit 1)\n\
+echo "✅ Nginx configuration is valid"\n\
 \n\
 # 映射 Zeabur 環境變量到後端期望的變量名\n\
 echo "🔧 Mapping Zeabur environment variables..."\n\
@@ -118,17 +135,20 @@ echo "✅ Environment variables mapped successfully"\n\
 echo "📍 DB: $DB_HOST:$DB_PORT/$DB_NAME"\n\
 echo "👤 API User: $API_USERNAME"\n\
 echo "🏨 Hotel Code: $API_HOTEL_CODE"\n\
+echo "🌐 Nginx will listen on: $PORT"\n\
+echo "🐍 FastAPI will run on: 127.0.0.1:8000"\n\
 \n\
 # 啟動supervisor\n\
+echo "🚀 Starting Supervisor with all services..."\n\
 exec /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf' > /start.sh && \
     chmod +x /start.sh
 
-# 暴露端口 (Zeabur會動態分配)
-EXPOSE 80
+# 暴露端口 (Zeabur通常分配8080)
+EXPOSE 8080
 
-# 健康檢查
+# 健康檢查 (使用動態端口腳本)
 HEALTHCHECK --interval=30s --timeout=10s --start-period=60s --retries=3 \
-    CMD curl -f http://localhost:${PORT:-80}/health || exit 1
+    CMD curl -f http://localhost:$(printenv PORT || echo 80)/health || exit 1
 
 # 啟動命令
 CMD ["/start.sh"]
