🔧 修復前端構建 npm 命令
❌ 問題：npm ci --only=production 在新版本中已棄用
✅ 修復：改為 npm ci --silent

這應該解決 Zeabur 前端構建階段的失敗問題

--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -11,8 +11,8 @@ WORKDIR /frontend
 # 複製前端package.json
 COPY front-end/hotel-dashboard/package*.json ./
 
-# 安裝依賴
-RUN npm ci --only=production --silent
+# 安裝依賴 (包含devDependencies，React構建需要)
+RUN npm ci --silent
 
 # 複製前端源代碼
 COPY front-end/hotel-dashboard/ ./
