🔧 修復 Zeabur 502 端口問題 - 簡化為固定8080
❌ 問題根源：
- nginx.zeabur.conf: listen 80
- Zeabur 分配: 8080 端口
- 動態替換腳本複雜且可能失效

✅ 解決方案：
- nginx.zeabur.conf: 直接 listen 8080
- 移除複雜的動態端口替換邏輯
- 簡化 start.sh 腳本，提高穩定性
- 固定健康檢查端口為 8080

🎯 現在 Nginx 和 Zeabur 端口完全匹配，502 錯誤應該解決！

--- a/nginx.zeabur.conf
+++ b/nginx.zeabur.conf
@@ -1,7 +1,7 @@
 # 🏕️ 蟬說露營區管理系統 - Zeabur Nginx配置
 server {
-    # Zeabur會動態分配端口，預設使用80
-    listen 80;
+    # Zeabur使用8080端口
+    listen 8080;
     server_name _;
     
     # 客戶端請求體大小限制
