🔧 修復容器網絡訪問問題 - Nginx監聽所有接口
❌ 問題根源：
- nginx: listen 8080 (默認只監聽localhost:8080)
- 容器外部無法訪問，導致502錯誤
- 服務運行正常但網絡不可達

✅ 解決方案：
- nginx: listen 0.0.0.0:8080 (監聽所有網絡接口)
- 允許容器外部訪問Nginx服務
- 保持API後端127.0.0.1:8000（容器內通信正常）

🎯 現在外部請求可以正確路由到Nginx，再由Nginx代理到API

--- a/nginx.zeabur.conf
+++ b/nginx.zeabur.conf
@@ -1,7 +1,7 @@
 # 🏕️ 蟬說露營區管理系統 - Zeabur Nginx配置
 server {
-    # Zeabur使用8080端口
-    listen 8080;
+    # Zeabur使用8080端口，監聽所有網絡接口
+    listen 0.0.0.0:8080;
     server_name _;
     
     # 客戶端請求體大小限制
