🔧 修復 API 服務啟動命令 - 解決 exit status 127
❌ 問題根源：
- supervisord.conf 中使用 'uvicorn' 命令
- 容器環境中找不到 uvicorn 可執行文件
- exit status 127 = command not found

✅ 解決方案：
- 使用完整路徑：/usr/local/bin/python -m uvicorn
- 確保使用正確的 Python 解釋器
- 通過模組方式啟動 uvicorn

🎯 現在 API 服務應該能正常啟動了！

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -37,7 +37,7 @@ stderr_logfile_backups=5
 # Python Backend - FastAPI應用
 # ==========================================
 [program:api]
-command=uvicorn main:app --host 127.0.0.1 --port 8000 --workers 1
+command=/usr/local/bin/python -m uvicorn main:app --host 127.0.0.1 --port 8000 --workers 1
 directory=/app/backend/app
 user=root
 autostart=true
