🔧 修復 403 Forbidden 錯誤 - 添加前端文件權限設置
❌ 問題：
- 網站返回 403 Forbidden
- nginx 找不到或無法訪問前端文件
- 文件權限可能不正確

✅ 解決方案：
- 添加 chmod -R 755 /var/www/html (讀取權限)
- 添加 chown -R www-data:www-data /var/www/html (nginx用戶)
- 確保前端構建文件對 nginx 可讀

🎯 現在前端文件應該能正常訪問了！

--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -80,8 +80,10 @@ COPY --from=frontend-builder /frontend/build/ /var/www/html/
 COPY nginx.zeabur.conf /etc/nginx/sites-available/default
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# 創建必要目錄
-RUN mkdir -p /app/logs /var/log/supervisor
+# 創建必要目錄和設置權限
+RUN mkdir -p /app/logs /var/log/supervisor && \
+    chmod -R 755 /var/www/html && \
+    chown -R www-data:www-data /var/www/html
 
 # 創建非root用戶
 RUN useradd --create-home --shell /bin/bash app_user && \
