💪 強力修復 403 錯誤 - 啟動時重設權限 + 強制重建
❌ 問題：Zeabur 可能使用緩存鏡像，權限設置不生效

✅ 強力解決方案：
🔧 在啟動腳本中強制重設權限：
   - chmod -R 755 /var/www/html
   - chown -R www-data:www-data /var/www/html

🧪 添加診斷信息：
   - 檢查 index.html 文件存在性
   - 測試文件可讀性
   - 顯示權限狀態

🏷️ 添加版本號強制重建：
   - Build Version: 2025-09-17-403-fix
   - 避免 Zeabur 使用舊緩存

🎯 現在權限問題應該徹底解決！

--- a/Dockerfile.zeabur
+++ b/Dockerfile.zeabur
@@ -1,5 +1,6 @@
 # 🏕️ 蟬說露營區管理系統 - Zeabur全棧部署
 # Frontend + Backend in Single Container for Zeabur
+# Build Version: 2025-09-17-403-fix - 強制重建解決權限問題
 
 # ==========================================
 # 階段1: 構建React前端
@@ -124,6 +125,17 @@ echo "✅ Environment variables mapped successfully"\n\
 echo "📍 DB: $DB_HOST:$DB_PORT/$DB_NAME"\n\
 echo "👤 API User: $API_USERNAME"\n\
 echo "🏨 Hotel Code: $API_HOTEL_CODE"\n\
+\n\
+# 強制設置前端文件權限 (解決403問題)\n\
+echo "🔧 Setting up frontend file permissions..."\n\
+chmod -R 755 /var/www/html\n\
+chown -R www-data:www-data /var/www/html\n\
+ls -la /var/www/html/index.html || echo "⚠️ index.html not found"\n\
+echo "✅ Frontend permissions set: $(ls -ld /var/www/html)"\n\
+\n\
+# 測試前端文件可讀性\n\
+echo "🧪 Testing frontend file accessibility..."\n\
+test -r /var/www/html/index.html && echo "✅ index.html is readable" || echo "❌ index.html is not readable"\n\
 \n\
 # 啟動supervisor\n\
 echo "🚀 Starting Supervisor with all services..."\n\
