🔍 添加完整錯誤診斷系統 - 解決403無錯誤信息問題
❌ 用戶反饋問題：
- 403 Forbidden 沒有具體錯誤信息
- 無法知道問題根源
- 缺乏調試能力

✅ 全面診斷解決方案：

🌐 Nginx 錯誤處理升級：
- 詳細的 403/404/500 錯誤信息
- JSON 格式錯誤響應
- 時間戳、URI、權限等詳細信息
- /debug-frontend 端點

🔧 後端調試 API：
- /debug-system 端點
- 檢查前端文件存在性和權限
- 環境變量診斷
- 系統信息收集
- nginx 進程檢查

📊 詳細診斷信息：
- 文件權限 (owner/group/permissions)
- 文件大小和可讀性
- 目錄內容列表
- 系統環境檢查

🎯 現在可以精確診斷 403 錯誤根源！

--- a/nginx.zeabur.conf
+++ b/nginx.zeabur.conf
@@ -120,13 +120,39 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 錯誤處理
-    error_page 404 /index.html;
-    error_page 500 502 503 504 @fallback;
+    # 調試端點 - 檢查前端文件狀態
+    location /debug-frontend {
+        default_type application/json;
+        return 200 '{"status":"debug","message":"Frontend file check","timestamp":"$time_iso8601","server":"$hostname","uri":"$uri","document_root":"$document_root","request_uri":"$request_uri"}';
+        add_header Content-Type application/json;
+    }
     
-    location @fallback {
+    # 錯誤處理 - 提供詳細信息
+    error_page 403 @error_403;
+    error_page 404 @error_404;
+    error_page 500 502 503 504 @error_5xx;
+    
+    location @error_403 {
+        default_type application/json;
+        return 403 '{"error":"403 Forbidden","message":"Access denied to requested resource","timestamp":"$time_iso8601","uri":"$uri","document_root":"$document_root","request_method":"$request_method","remote_addr":"$remote_addr","user_agent":"$http_user_agent"}';
+        add_header Content-Type application/json;
+    }
+    
+    location @error_404 {
         root /var/www/html;
-        try_files /index.html =503;
+        try_files /index.html @error_404_json;
+    }
+    
+    location @error_404_json {
+        default_type application/json;
+        return 404 '{"error":"404 Not Found","message":"Requested resource not found","timestamp":"$time_iso8601","uri":"$uri","document_root":"$document_root"}';
+        add_header Content-Type application/json;
+    }
+    
+    location @error_5xx {
+        default_type application/json;
+        return 500 '{"error":"Server Error","message":"Internal server error occurred","timestamp":"$time_iso8601","uri":"$uri","status":"$status"}';
+        add_header Content-Type application/json;
     }
 
     # 日誌配置 (Zeabur會收集)
